--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "electron-dev": "cross-env NODE_ENV=development electron .",
     "build": "npm run build:main && webpack --mode production",
     "build:main": "node scripts/build-main.js",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:all": "npm run build && electron-builder --win --mac --linux",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -26,8 +29,6 @@
   "dependencies": {
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
-    "electron": "^36.0.1",
-    "electron-builder": "^26.0.12",
     "pitchfinder": "^2.3.2",
     "pitchy": "^4.1.0",
     "react": "^19.1.0",
@@ -39,6 +40,8 @@
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
+    "electron": "^36.0.1",
+    "electron-builder": "^26.0.12",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
@@ -49,11 +52,28 @@
   "build": {
     "appId": "com.fret.app",
     "productName": "Fret",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "package.json"
+    ],
     "mac": {
-      "category": "public.app-category.music"
+      "category": "public.app-category.music",
+      "target": "dmg"
     },
     "win": {
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     },
     "linux": {
       "target": "AppImage"
